# vitalnix

./: #add1#  #del#  .gitignore  .revisions.0  Changelog.txt  GNUmakefile.am  GNUmakefile.src  Makefile  Makefile.am  Makefile.mingw  Mk  README.html  Readme.txt  a2a.pm  add  bvw.pl  changes.txt  cnvep.pl  cnvep.txt  code  codec.pm  configure  configure-developer  configure.ac  cp.shadow  datescram.pm  dautool  dautool.cfg  dautool.txt  decode  format  install.txt  kennwort  listadd  listadd.1st  listchg  listcmp  listcmp.1st  listdel  listneu  (+27 more)
accdb/: accdb.c  bf.c  bf.h  bf_x86.S  phonemic.c
backends/: shadow.c
base/: LibHirogen2.pm  dautool.cfg  extralib.pm
cgi/: base.c  base.h  chpasswd.c  cquota.c  sh_auth.c  sh_auth.h
cui/: autorun.c  autorun.h  data.c  data.h  global.h  main.c  main.h  pwlist.cpp  pwlist.h  sync.c  sync.h  xml_in.c  xml_in.h
devutil/: listusers.c  makevars.inc  makezip  vitalnix.spec  vx_icon.psp  vx_icon.rc
doc/: Changelog.txt  DAUtool.html  Makefile.am  To-Do.txt  accdb_api.php  arrows.psp  backend_api.php  backend_shadow.php  cspark.php  faq.php  format-printer.css  format.css  history.php  index.php  install.txt  old_uuid.c  setup.php  sp_xmlds.php  spec_sdf.php  sysprog.php  vhex.pov  vitalnix.7  vitalnix.psp  vitalnix_admin.lyx  vitalnix_devel.lyx  vxckuuid.8  vxdbdump.8  vxdbinfo.8  vxfinger.1  vxfixuuid.8  vxgroupadd.8  vxgroupbld.8  vxgroupdel.8  vxgroupmod.8  vxid.1  vxpwlfmt.8  vxrandpw.1  vxtryauth.8  vxuseradd.8  vxuserdel.8  (+3 more)
etc/: Makefile.am  autouid.conf  db_ldap.conf  db_mmd.conf  db_multi.conf  db_mysql.conf  db_nss.conf  db_nss1.conf  db_shadow.conf  db_shadowdevel.conf  groupadd.conf  groupdel.conf  groupmod.conf  libvxdb.conf  libvxmdsync.conf  libvxpdb.conf  lpacct.conf  useradd.conf  userdel.conf  usermod.conf
first/: readme.1st
include/: accdb.h  accdb_int.h
share/: Makefile.am  cups-vxlpacct.diff  dump_and_restore  lpacct_init.sql  nss-mysql.sql  nss_ldap.ldif  nss_mysql.sql  pg.rtf  pg_DE.rtf  rfc2307bis_fixed.schema  rfc2307bis_utf8.schema  samba-use_unixname_for_print.diff  sb_DE.tex  (+2 more)
src/: GNUmakefile.tgt  GNUmakefile.var  Makefile.am  Makevars.inc  compiler.h  png2wx.pl  png2wx.py  vitalnix-config.h
src/cgiutils/: .gitignore  Automakefile  chpasswd.c  lpacview.php  lpaview.c  ntactiv.c  vwquota.c
src/clutils/: .gitignore  Automakefile  ckuuid.c  dbdump.c  dbinfo.c  finger.c  fixuuid.c  groupadd.c  groupbld.c  groupdel.c  groupmod.c  html2man.c  id.c  ihlogon.c  mdckuuid.c  mdfixuuid.c  mdpwlfmt.c  mdsingle.c  mdsync.c  newuser.c  pdbdump.c  pdbinfo.c  pwlfmt.c  randpw.c  single.c  tryauth.c  tryauth.pl  useradd.c  useradd_lib.c  useradd_lib.h  userdel.c  userdel_lib.c  userdel_lib.h  usermod.c  usermod_lib.c  usermod_lib.h  usersync.c
src/devutil/: .gitignore  Automakefile  tcrypt.c  testcase.c  vitalnix-config  vitalnix.pc  vxcconfig.c
src/doc/: .gitignore  Base-footer.php  Base-format-printer.icss  Base-format-screen.icss  Base-header.php  GNUmakefile.am  api-libvxcgi.php  api-libvxcli.php  api-libvxcore.php  api-libvxeds.php  api-libvxmdfmt.php  api-libvxmdsync.php  api-libvxpdb.php  api-libvxplex.php  api-libvxutil.php  api-mod_backend.php  api-mod_pwlstyle.php  cgiutils-chpasswd.php  cgiutils-vwquota.php  changelog.txt  check  clutils-dbinfo.php  clutils-groupadd.php  clutils-groupdel.php  clutils-groupmod.php  clutils-mdfixuuid.php  clutils-mdpwlfmt.php  clutils-pdbdump.php  clutils-pdbinfo.php  clutils-randpw.php  clutils-tryauth.php  clutils-useradd.php  clutils-userdel.php  clutils-usermod.php  driver-dummy.php  driver-mysql.php  driver-nss1.php  driver-shadow.php  extra-aee.php  extra-pwlstyles.php  (+39 more)
src/drivers/: Automakefile  dummy.c  ldap.c  mmd.c  nss.c  nss1.c  proto.h  static-build.h
src/drivers/mysql/: mysql.c
src/drivers/shadow/: aux.c  dbops.c  fsgroup.c  fspasswd.c  fsshadow.c  fsvxshadow.c  shadow.c  shadow.h
src/include/: Makefile.am
src/include/vitalnix/: compiler.h
src/include/vitalnix/libvxcgi/: libvxcgi.h
src/include/vitalnix/libvxcli/: libvxcli.h
src/include/vitalnix/libvxcore/: loader.h
src/include/vitalnix/libvxdb/: config.h  libvxdb.h  xafunc.h
src/include/vitalnix/libvxeds/: libvxeds.h  vtable.h
src/include/vitalnix/libvxmdfmt/: libvxmdfmt.h  vtable.h
src/include/vitalnix/libvxmdsync/: libvxmdsync.h
src/include/vitalnix/libvxpdb/: config.h  libvxpdb.h  xafunc.h  xwfunc.h
src/include/vitalnix/libvxplex/: libvxplex.h
src/include/vitalnix/libvxutil/: defines.h  libvxutil.h
src/libvxcgi/: Automakefile  auth.c  cgi.c  libvxcgi.h  libvxcgi.pc.in
src/libvxcli/: Automakefile  cli.c  libvxcli.h  libvxcli.pc.in
src/libvxcore/: Automakefile  libvxcore.pc.in  loader.c  loader.h
src/libvxdb/: Automakefile  aux.c  config.c  dummy.c  libvxdb.pc.in  loader.c
src/libvxeds/: Automakefile  eds.c  fm_sdf.c  fm_xml.c  libvxeds.h  libvxeds.pc.in  static-build.h  vtable.h
src/libvxmdfmt/: Automakefile  extra.c  internal.h  libvxmdfmt.pc.in  pwlfmt.c  s_a1.c  s_pghtml.c  s_pgrtf.c  s_pgtxt.c  s_sb.c  static-build.h  vtable.h
src/libvxmdsync/: Automakefile  base.c  fixup.c  internal.h  libvxmdsync.h  libvxmdsync.pc.in  logversion.h  proc.c  read_file.c
src/libvxpdb/: aux.c  config.c  config.h  dummy.c  libvxpdb.h  loader.c  xafunc.h  xwfunc.h
src/libvxplex/: libvxplex.h  plex.c
src/libvxutil/: Automakefile  blowfish.c  blowfish.h  blowfish_x86.S  crypt.c  genpw.c  libvxutil.h  libvxutil.pc.in  phash.c  util.c  uuid.c
src/lpacct/: .gitignore  Automakefile  acct.c  acct.h  confirm.c  drop.c  drop.h  global.h  gsfilter.c  gsfilter.h  image.c  image.h  lpacct.c  lpacct.h  shared.c  shared.h  util.c  util.h
src/steelmill/: .gitignore  Automakefile  dirstamp.c  wd_about.cpp  wd_about.hpp  wd_config.dis  wd_config.hpp  wd_fixuuid.cpp  wd_fixuuid.hpp  wd_main.cpp  wd_main.hpp  wd_overview.cpp  wd_overview.hpp  wd_pwlfmt.cpp  wd_pwlfmt.hpp  wd_single.cpp  wd_single.hpp  wd_splash.cpp  wd_splash.hpp  wd_sync.cpp  wd_sync.hpp  wd_usermod.cpp  wd_usermod.hpp  xu_common.cpp  xu_common.hpp  xu_database.cpp  xu_database.hpp  xu_loader.cpp  xu_loader.hpp
(+39 files in other folders)
