# -*- Makefile -*-

AUTOMAKE_OPTIONS = subdir-objects

nobase_include_HEADERS = \
	vitalnix/compiler.h \
	vitalnix/config.h \
	vitalnix/libvxcgi/libvxcgi.h \
	vitalnix/libvxcli/libvxcli.h \
	vitalnix/libvxcore/loader.h \
	vitalnix/libvxdb/config.h \
	vitalnix/libvxdb/libvxdb.h \
	vitalnix/libvxdb/xafunc.h \
	vitalnix/libvxeds/libvxeds.h \
	vitalnix/libvxeds/vtable.h \
	vitalnix/libvxmdfmt/libvxmdfmt.h \
	vitalnix/libvxmdfmt/vtable.h \
	vitalnix/libvxmdsync/libvxmdsync.h \
	vitalnix/libvxutil/defines.h \
	vitalnix/libvxutil/libvxutil.h
